# unpac

./: .gitignore  CMakeLists.txt  Makefile  README.md  STYLE.md
include/: .clangd  arcv.h  brres.h  brsar.h  g03_box_set.h  g03_item_set.h  giga  nmr_save.h  u8_arc.h
include/brres/: resource.h
include/giga/: alignment.hpp  app.hpp  archive.hpp  bytestream.hpp  endianness.hpp  giga.hpp  lzss.hpp  platform.hpp  types.hpp  vector3.hpp  version.hpp
src/: .clangd  arcv.cpp  brres.cpp  brsar.cpp  g03_item_set.cpp  giga  main.cpp  nmr_save.cpp  u8_arc.cpp
src/brres/: .clangd  resource.cpp
src/giga/: app.cpp  archive.cpp  bytestream.cpp  endianness.cpp  lzss.cpp  platform.cpp
